# gundb

./: .gitignore  README.md  pyproject.toml
docs/: theory.md  theory.txt
media/: data_flow_and_recovery.plantuml
src/gundb/: __main__.py  core_types.py  event_stream.py  events.py  models.py  nodes.py  site.py  vector_clock.py
tests/: test_models.py  test_vector_clock.py
