[tool.poetry]
name = "gundb"
version = "0.1.0"
description = "A globally unstoppable database: always locally writeable, multi-master, with conflict free global replicated event sourcing"
authors = ["Lee Braiden <lee.braiden@pm.me>"]
license = "AGPLv3"
packages = [
    { include="gundb", from="src" },
]

[tool.poetry.scripts]
gundb = "gundb.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"  # If using PostgreSQL
pydantic = "^1.10"  # Added Pydantic dependency
# Add other dependencies as needed

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
